# dynamic-pricing

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  main.py  requirements.txt
api/app/: main.py
api/app/src/: functions.py
api/demo_data/: prices_format_example.json
api/src/: functions.py
extraction/: main.py  models.py
modeling/: models.py
