[tool.poetry]
name = "dynamic-pricing"
version = "0.1.0"
description = "The Speedy Gonzales solution for the dynamic pricing project."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dynamic_pricing"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.testing.dependencies]
pytest = "^7.2.1"


[tool.poetry.group.api.dependencies]
requests = "^2.28.2"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
google-api-python-client = "^2.80.0"


[tool.poetry.group.demo.dependencies]
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
